// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarContent Should render with props 1`] = `
<section>
  <div
    class="makeStyles-links-6"
  />
</section>
`;

exports[`SidebarContent Should render without props 1`] = `
<section>
  <div
    class="makeStyles-links-1"
  />
</section>
`;
